--- a/src/PagedListResult.DataModels/PagedListResult.DataModels.csproj
+++ b/src/PagedListResult.DataModels/PagedListResult.DataModels.csproj
@@ -22,6 +22,38 @@
     <LangVersion>9.0</LangVersion>
     <Language>en-US</Language>
     <RepositoryType>GIT</RepositoryType>
+    <PackageReleaseNotes>
+      **v3.0.0.0**
+      #### Breaking changes
+      FROM
+      ```csharp
+      public class PagedRequest
+      {
+      // ...
+      public ICollection&lt;string&gt; PredefinedRecords { get; set; } = new     HashSet&lt;string&gt;();
+      // ...
+      }
+      ```
+
+      TO
+      ```csharp
+      public class PagedRequest
+      {
+      // ...
+      public DataPredefinedFilterDefinition PredefinedRecord { get; set; } = new DataPredefinedFilterDefinition();
+      // ...
+      }
+      ```
+
+      ```csharp
+      public class DataPredefinedFilterDefinition
+      {
+      public string PredefinedFieldName { get; set; }
+
+      public ICollection&lt;string&gt; PredefinedRecords { get; set; } = new     HashSet&lt;string&gt;();
+      }
+      ```
+    </PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
